--- a/Logistic Regression & comparison.ipynb
+++ b/Logistic Regression & comparison.ipynb
@@ -1871,6 +1871,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "852ac531-a817-4316-8651-11abf45c4410",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Train-Test Split & Standard Scaler"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "9f8d616c-e447-4ed8-b7c7-54a84a7ea132",
@@ -3217,6 +3227,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d7c11c1-0ec6-4ecb-a4d9-d1dc31df3480",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "9ce990e5-46b1-4fbe-9250-4c0fef99fa60",
@@ -3844,7 +3864,9 @@
   {
    "cell_type": "markdown",
    "id": "72650697-4877-49f1-be5e-02a2089cd6ba",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## SVM: Support Vector Machine"
    ]
@@ -4460,7 +4482,9 @@
   {
    "cell_type": "markdown",
    "id": "87860806-5d82-41ce-a056-d12e73d4592b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Random Forest"
    ]
@@ -5033,6 +5057,14 @@
     "plt.legend(loc=\"lower right\")\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ebc822a-52e6-457a-808b-dffd8e0abe5d",
+   "metadata": {},
+   "source": [
+    "## Cross Validation"
    ]
   },
   {
